# project-watch-mcp

./: .coverage  .env.example  .gitignore  .mcp.json  AGENT_ANALYSIS_REPORT.md  CLAUDE.md  FIX_DOCUMENTATION.md  MEMORY_NAVIGATOR_REPORT.md  README.md  SESSION_HANDOFF.md  UVX_USAGE.md  build-local.sh  check_indexes.py  coverage.json  coverage_config.json  defect-management-guide.md  documentation-enhancement-todo.md  feature-todo.md  fix_lucene_index.py  project-watch-mcp-usage-guide.md  pyproject.toml  qa-strategy.md  quality-metrics-dashboard.md  run_incremental_tests.sh  run_tests.sh  test-cases-critical.md  test-server.sh  todo-code-classification.md  todo-enable-file-classification.md  todo.md  vector_performance_benchmark.csv
.claude/: .initialized  .last_auto_init  settings.json
.claude/.claude/: .last_auto_init
.claude/agents/: project-context-expert.md  project-file-navigator.md  project-memory-navigator.md  project-todo-orchestrator.md  project-todo-sync-protocol.md  project-todo-validation-agent.md
.claude/architecture/: system-features-analysis.md
.claude/artifacts/2025-08-11/: unified-testing-strategy.md
.claude/artifacts/2025-08-14/: comprehensive-testing-todo.md  todo.md
.claude/commands/: available-agents.md  do.md  memstat.md
.claude/hooks/: .init_requested  HOOK_SETUP.md  README.md  config.json  enforce_agent_usage.py  session-start.py
.claude/hooks/session-start/: session-start.py
.claude/hooks/utils/: __init__.py  hook_output.py
.github/workflows/: ci.yml  publish.yml
docs/: LANGUAGE_DETECTION_CACHE.md  MIGRATION.md  TASK-004-deliverables.md  advanced_features.md  complexity_analysis.md  complexity_analysis_strategy.md  incremental-indexing-execution-plan.md  incremental-indexing-implementation-summary.md  language_detection.md  monitoring-persistence.md  neo4j_vector_search.md  test-infrastructure-design.md  test-infrastructure-readme.md
scripts/: rebuild_lucene_index.py  verify_test_structure.py
src/: __init__.py
src/project_watch/: __main__.py  cli.py  neo4j_rag.py  repository_monitor.py  server.py
src/project_watch_mcp/: __init__.py  __main__.py  cli.py  config.py  neo4j_rag.py  repository_monitor.py  server.py
src/project_watch_mcp/complexity_analysis/: __init__.py  base_analyzer.py  metrics.py  models.py
src/project_watch_mcp/core/: __init__.py  initializer.py  monitoring_manager.py
src/project_watch_mcp/language_detection/: __init__.py  cache.py  hybrid_detector.py  models.py
src/project_watch_mcp/optimization/: __init__.py  batch_processor.py  cache_manager.py  connection_pool.py  optimizer.py
src/project_watch_mcp/utils/: __init__.py  embedding.py  profiler.py
src/project_watch_mcp/vector_search/: __init__.py  neo4j_native_vectors.py  neo4j_native_vectors_old.py
tests/: CONSOLIDATION_ACTION_PLAN.md  INCREMENTAL_INDEXING_VERIFICATION.md  README.md  TASK-001-004-COMPLETION-SUMMARY.md  TEST_CONSOLIDATION_REPORT.md  TEST_STRUCTURE.md  __init__.py  conftest.py  incremental_indexing_test_report.md  neo4j_rag_consolidation_analysis.md  neo4j_rag_validation_report.md  test-todo.md  test_analyze_complexity.py  test_async_session_management.py  test_cli_initialize.py  test_cli_monitoring.py  test_config.py  test_corruption_prevention.py  test_e2e_tool_execution.py  test_embeddings.py  test_end_to_end.py  test_main_module.py  test_mcp_integration.py  test_mcp_server.py  test_multi_project_isolation.py  test_neo4j_rag.py  test_project_context.py  test_repository_monitor.py
tests/integration/: README.md  __init__.py  test_complexity_accuracy.py  test_corruption_prevention.py  test_e2e_tool_execution.py  test_embedding_provider_switching.py  test_embeddings_integration.py  test_embeddings_real.py  test_full_system_integration.py  test_incremental_edge_cases.py  test_integration_monitoring.py  test_language_complexity_integration.py  test_language_detection_caching.py  test_lucene_pattern_search.py  test_mcp_failures.py  test_mcp_integration.py  test_monitoring_persistence.py  test_multi_project_isolation.py  test_neo4j_search_solution_validation.py  test_no_mocks.py  test_performance_benchmark.py  test_project_context.py  test_project_isolation.py  test_recursion_memory_fixes.py  test_vector_performance_comparison.py  test_vector_search_integration.py  test_vector_vs_lucene_performance.py
tests/integration/complexity/: test_class_linkage_demo.py  test_complexity_cross_language.py
tests/integration/database/: README_REAL_TESTS.md  test_docker_neo4j.py  test_neo4j_connection.py  test_neo4j_connection_real.py  test_neo4j_search_solution_validation.py  test_neo4j_search_validation_real.py  test_real_neo4j_integration.py
tests/integration/e2e/: test_end_to_end.py  test_full_system_integration.py  test_integration_monitoring.py  test_monitoring_persistence.py  test_multi_project_isolation.py  test_no_mocks.py  test_project_context.py
tests/integration/embeddings/: test_embedding_enrichment.py  test_embedding_provider_switching.py  test_embeddings_integration.py  test_embeddings_real.py  test_native_vector_integration.py  test_voyage_embeddings.py
tests/integration/language_detection/: test_language_detection.py  test_language_detection_accuracy.py
tests/unit/: TESTING_GUIDELINES.md  __init__.py  test_batch_indexing.py  test_cli.py  test_cli_background_indexing.py  test_cli_incremental.py  test_cli_initialize.py  test_cli_monitoring.py  test_codefile_enhanced.py  test_config.py  test_debouncing.py  test_file_classification.py  test_incremental_indexing.py  test_indexing_status_tool.py  test_language_detection.py  test_language_detection_cache.py  test_language_detection_comprehensive.py  test_large_file_handling.py  test_line_counting.py  test_lucene_chunking_fix.py  test_lucene_escaping.py  test_neo4j_rag.py  test_neo4j_rag_extended.py  test_neo4j_vector_index.py  test_repository_monitor.py  test_repository_monitor_extended.py  test_return_type_validation.py  test_server.py  test_server_background_indexing.py  test_thread_safety_hybrid_detector.py  test_xxhash_performance.py
tests/unit/cli/: test_cli_skip_index.py  (+1 more)
(+91 files in other folders)
